fixed horizontal scroll

--- a/src/components/ContactList/Contanct/Contanct.css
+++ b/src/components/ContactList/Contanct/Contanct.css
@@ -1,6 +1,4 @@
 .contact-container {
-  width: 100%;
-
   margin: 20px 0;
 
   background-color: white;
